[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player/111111.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Hit and Hut/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/79381.jpg" type="Texture" id=4]
[ext_resource path="res://Hit and Hut/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://ShowHealht.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.81277, 14.0047 )

[sub_resource type="Animation" id=2]
resource_name = "Attacking"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 6.39366, 10.0763 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Menus/Fonte/ARIALBD.TTF"

[sub_resource type="DynamicFont" id=9]
size = 8
use_filter = true
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Menus/Fonte/ARIALI.TTF"

[sub_resource type="DynamicFont" id=11]
size = 7
use_filter = true
font_data = SubResource( 10 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
player_health = 3

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )
hframes = 20
frame = 14

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.0416863, 7.05512 )
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attacking = SubResource( 2 )
anims/Dashing = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Jumping = SubResource( 5 )
anims/Moving = SubResource( 6 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.21022, 3.4687 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
visible = false
collision_layer = 8
collision_mask = 64

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.356338, 6.52982 )
shape = SubResource( 7 )

[node name="Dash" type="Timer" parent="."]

[node name="DoubleJump" type="Timer" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0.796078 )
margin_left = -9.84694
margin_top = -10.2438
margin_right = 10.1531
margin_bottom = -8.24378
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="." instance=ExtResource( 6 )]
margin_left = -0.297638
margin_right = 39.7024

[node name="Label" parent="Control" index="1"]
margin_left = -5.77008
margin_top = -22.2063
margin_right = 7.22992
margin_bottom = -7.20628
custom_fonts/font = SubResource( 9 )

[node name="Panel" type="Panel" parent="Control"]
modulate = Color( 1, 1, 1, 0.694118 )
margin_left = -19.8343
margin_top = 17.5785
margin_right = 20.1657
margin_bottom = 37.5785
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Panel"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 11 )
text = "Coxinha:"

[node name="Label2" type="Label" parent="Control/Panel"]
margin_top = 5.0
margin_right = 45.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 11 )
text = "Coquinha:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control/Panel"]
margin_left = 0.260498
margin_top = 9.81745
margin_right = 40.2605
margin_bottom = 23.8174
custom_fonts/font = SubResource( 11 )
text = "Almo√ßo:"
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="timeout" from="Dash" to="." method="_on_Dash_timeout"]
[connection signal="timeout" from="DoubleJump" to="." method="_on_Double_Jump_and_Dash_timeout"]

[editable path="Hitbox"]

[editable path="Hurtbox"]

[editable path="Control"]
